syntax = "proto3";

package video_upload;

service Upload {
    rpc S3Request(Request) returns (Response) {}
	rpc UploadFile(Request) returns (UploadResponse) {}
}

message Request {
    string filename = 1;
}

message Response {
    string presigned_url = 1;
}

message UploadResponse {
	string error = 1
}
